Bug 512586 - flash matching bracket offset to the right
Summary: flash matching bracket offset to the right
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.20.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 512773 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-11-25 09:32 UTC by Ilia Kats
Modified: 2025-12-13 04:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (27.16 KB, video/webm)
2025-11-25 09:32 UTC, Ilia Kats
Details
Recreation of this bug on 25.12 (544.91 KB, video/webm)
2025-12-13 04:09 UTC, me
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilia Kats 2025-11-25 09:32:12 UTC
Created attachment 187152 [details]
screen recording

SUMMARY
The "Flash matching bracket" feature flashes too far to the right by about 5 characters or so (see attached video). I only started noticing it today after updating to frameworks 6.20, so I'm assuming it's something in the 6.20 ktexteditor, but it may have been introduced earlier.

STEPS TO REPRODUCE
1. Enable "Flash matching brackets" feature
2. write some code with brackets
3. observe the offset

OBSERVED RESULT
The flash is offset from the actual bracket

EXPECTED RESULT
The flash is at the position of the bracket

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20
Qt Version: 6.10
Comment 1 Waqar Ahmed 2025-11-25 10:46:55 UTC
Git commit 5f8b10d432f7809771cae65c97b2f7bc91e48094 by Waqar Ahmed.
Committed on 25/11/2025 at 10:44.
Pushed by waqar into branch 'master'.

Fix text animation

The coordinate must be mapped to editor

M  +1    -0    src/view/katetextanimation.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/5f8b10d432f7809771cae65c97b2f7bc91e48094
Comment 2 Waqar Ahmed 2025-11-30 06:23:51 UTC
*** Bug 512773 has been marked as a duplicate of this bug. ***
Comment 3 me 2025-12-13 04:09:52 UTC
Created attachment 187570 [details]
Recreation of this bug on 25.12

This still seems to happen on 25.12