Fix text animation

The coordinate must be mapped to editor

BUG: 512586